--- a/index.html
+++ b/index.html
@@ -14,17 +14,23 @@
     <div style="position:relative;width:100%;height:300px;padding-bottom:20%"><iframe width="384" height="216" src="https://insights-embed.newrelic.com/embedded_widget/NMoVaCcl5vFLJPc1SoD6GBijp-exOxtz" frameborder="0" style="position:absolute;width:100%;height:100%"></iframe></div>
   </div>
   <div class="col-md-4">
+    <div style="position:relative;width:100%;height:300px;padding-bottom:20%"><iframe width="384" height="216" src="https://insights-embed.newrelic.com/embedded_widget/DE09K8rKZdOoLg1-BqV4bOInbciNfeGW" frameborder="0" style="position:absolute;width:100%;height:100%"></iframe></div>
+  </div>
+</div>
+
+
+<div class="row">
+  <div class="col-md-4">
     <div style="position:relative;width:100%;height:300px;padding-bottom:20%"><iframe width="384" height="216" src="https://insights-embed.newrelic.com/embedded_widget/yxnJEtow0t4d-ioj1c525EMPRzBRjWSP" frameborder="0" style="position:absolute;width:100%;height:100%"></iframe></div>
+  </div>
+  <div class="col-md-4">
+    <div style="position:relative;width:100%;height:300px;padding-bottom:20%"><iframe width="384" height="216" src="https://insights-embed.newrelic.com/embedded_widget/uHzPlQz6chgQxZP3OLAYVqYLB_CqvJYz" frameborder="0" style="position:absolute;width:100%;height:100%"></iframe></div>
   </div>
 </div>
 
 
 
-<div style="position:relative;width:100%;height:0;padding-bottom:30%"><iframe width="384" height="216" src="https://insights-embed.newrelic.com/embedded_widget/DE09K8rKZdOoLg1-BqV4bOInbciNfeGW" frameborder="0" style="position:absolute;width:70%;height:100%"></iframe></div>
 
-<br />
-
-<div style="position:relative;width:100%;height:0;padding-bottom:30%"><iframe width="384" height="216" src="https://insights-embed.newrelic.com/embedded_widget/uHzPlQz6chgQxZP3OLAYVqYLB_CqvJYz" frameborder="0" style="position:absolute;width:70%;height:100%"></iframe></div>
 
 
 </body>
